src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.min_tait.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error: aborting due to previous error

